<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bookmark_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:icon="@drawable/bookmark_icon"
            android:text="@string/bookmark"
            app:iconGravity="top"
            android:singleLine="true"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:iconTint="@color/black">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/desktop_mode_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:icon="@drawable/desktop_icon"
            android:text="@string/desktop_mode"
            app:iconGravity="top"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:iconTint="@color/black"
            >
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/History_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:icon="@drawable/history_icon"
            android:text="@string/history"
            app:iconGravity="top"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:iconTint="@color/black">
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fullscreen_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:icon="@drawable/fullscreen_icon"
            android:text="@string/fullscreen"
            app:iconGravity="top"
            android:singleLine="true"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:iconTint="@color/black"
            tools:ignore="ExtraText">
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_history"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:icon="@drawable/clear_history_icon"
            android:text="@string/clear_browsing_data"
            app:iconGravity="top"
            android:singleLine="true"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:iconTint="@color/black">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_page_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:icon="@drawable/share_icon"
            android:text="@string/share"
            app:iconGravity="top"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:iconTint="@color/black"
            >
        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/greyish_blue"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:icon="@drawable/back_button_icon"
            android:text="@string/back"
            app:iconGravity="top"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:iconTint="@color/black">
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/forward_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:icon="@drawable/forward_button_icon"
            android:text="@string/next"
            app:iconGravity="top"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:iconTint="@color/black"
            >
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/reload_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:icon="@drawable/reload_icon"
            android:text="@string/reload"
            app:iconGravity="top"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:iconTint="@color/black">
        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            app:icon="@drawable/save_button_icon"
            android:text="@string/save"
            app:iconGravity="top"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:iconTint="@color/black">
        </com.google.android.material.button.MaterialButton>

    </LinearLayout>
</LinearLayout>